vault関連の削除の続き

--- a/ansible/roles/docker/templates/docker-compose.yml.j2
+++ b/ansible/roles/docker/templates/docker-compose.yml.j2
@@ -5,7 +5,7 @@ services:
     volumes:
       - ./conf/secrets/config:/app/config:ro
       - ./logs/secrets:/app/logs:rw
-      - ./src/{{ service_repo_names.secrets }}:/app:ro
+      - ./src/{{ service_repo_names.secrets }}:/app:rw
       - ./conf/secrets/tokens:/app/tokens:rw
     restart: "no"
     healthcheck:
